# datafusion-ballista

./: Cargo.toml  Dockerfile  Dockerfile.ui  build_and_push.sh
ballista-cli/src/: command.rs  exec.rs  main.rs
ballista/client/src/: context.rs
ballista/core/: Cargo.toml
ballista/core/proto/: ballista.proto
ballista/core/src/: client.rs  config.rs  error.rs  event_loop.rs  lib.rs  trace.rs  utils.rs
ballista/core/src/cache_layer/medium/: local_disk.rs  local_memory.rs
ballista/core/src/cache_layer/object_store/: file.rs  mod.rs
ballista/core/src/cache_layer/policy/: file.rs
ballista/core/src/consistent_hash/: mod.rs
ballista/core/src/execution_plans/: distributed_query.rs  shuffle_reader.rs  shuffle_writer.rs  unresolved_shuffle.rs
ballista/core/src/object_store_registry/: cache.rs  mod.rs
ballista/core/src/plugin/: mod.rs  plugin_manager.rs  udf.rs
ballista/core/src/serde/: mod.rs
ballista/core/src/serde/scheduler/: from_proto.rs  mod.rs  to_proto.rs
ballista/executor/: Cargo.toml
ballista/executor/src/: collect.rs  cpu_bound_executor.rs  execution_engine.rs  execution_loop.rs  executor.rs  executor_process.rs  executor_server.rs  flight_service.rs  lib.rs  shutdown.rs  standalone.rs  terminate.rs
ballista/executor/src/metrics/: mod.rs
ballista/scheduler/: Cargo.toml
ballista/scheduler/src/: config.rs  display.rs  flight_sql.rs  planner.rs  scheduler_process.rs  standalone.rs  test_utils.rs
ballista/scheduler/src/api/: handlers.rs  mod.rs
ballista/scheduler/src/cluster/: kv.rs  memory.rs  mod.rs
ballista/scheduler/src/cluster/event/: mod.rs
ballista/scheduler/src/cluster/storage/: etcd.rs  mod.rs  sled.rs
ballista/scheduler/src/cluster/test_util/: mod.rs
ballista/scheduler/src/metrics/: mod.rs  prometheus.rs
ballista/scheduler/src/scheduler_server/: event.rs  external_scaler.rs  grpc.rs  mod.rs  query_stage_scheduler.rs  trace_manager.rs
ballista/scheduler/src/state/: execution_graph.rs  execution_graph_dot.rs  executor_manager.rs  mod.rs  session_manager.rs  task_manager.rs
ballista/scheduler/src/state/execution_graph/: execution_stage.rs
benchmarks/: Cargo.toml
dev/docker/: nginx.conf
